# AdBot

./: .env_example  .gitignore  Dockerfile  README.md  alembic.ini  client_main.py  config_reader.py  debug.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
db/: models.py
dialogs/: common.py  help.py  settings.py
functions/: bot_functions.py  data_cached.py  keywords_cache.py  session_decorator.py  userbot_functions.py
middlewares/: db.py
migrations/: env.py
migrations/versions/: 2023-12-15-11-52_cf4378657cbc_initial.py  2023-12-15-11-53_b8ffdff62dfe_user_model.py  2023-12-16-10-59_f9210507a6fc_keyword_model.py  2023-12-18-16-19_192abfd31097_user_keyword_link.py  2023-12-20-16-32_b3a7c1f60cba_categories.py  2023-12-20-16-52_169be06f24c1_sources.py  2023-12-25-09-13_01648d2c63ef_publication_model.py  2023-12-26-11-08_29a06242f9db_user_publication_link_model.py
src/: common_types.py  database.py
src/adbot/: main.py
src/adbot/api/: main.py  pagination.py
src/adbot/app/: app.py  config_reader.py
src/adbot/common/: async_mixin.py
src/adbot/domain/: events.py  exceptions.py  messagebus.py  (+2 more)
src/models/: __init__.py  category.py  keyword.py  publication.py  source.py  user.py  users_keywords_links.py  users_publications_links.py
tests/: conftest.py  helpers.py  test_adbot_services.py  test_messagebus.py  test_tg_bot_presentation.py
tests/01_unit_and_integration/: test_adbot_services.py  test_messagebus.py  test_tg_bot_presentation.py
tests/02_e2e/: test_app.py
tests/02_load/: test_async.py
tests/03_e2e/: test_app.py
(+45 files in other folders)
