[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[project]
name = "adbot"
version = "0.0.1"
authors = [
    { name = "yurii", email = "motovyuri@ya.ru" },
]
description = "AdBot"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiogram-dialog>=2.0.0b18"
]
[project.optional-dependencies]
test = [
    "pytest"
]
lint = [
    "flake8"
]

